--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,10 @@ html {
   background-size: cover;
   background-repeat: no-repeat;
   font-family: 'Montserrat', sans-serif;
+  color: white;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.5px;
 }
 
 html body {
@@ -19,6 +23,37 @@ html body main {
   flex-direction: row;
   align-items: center;
   height: 100vh;
+}
+
+html body main .bold {
+  font-weight: bold;
+}
+
+.orbitSimulationContainer {
+  width: 100%;
+  height: 80%;
+  position: relative;
+  border-radius: 25px;
+}
+
+.orbitSimulationContainer .earth {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: green;
+  border-radius: 50%;
+}
+
+.orbitSimulationContainer .sun {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  top: 50%;
+  left: 50%;
+  margin-left: -30px;
+  margin-top: -30px;
+  background-color: orange;
+  border-radius: 50%;
 }
 
 .orbitSimulationUserInput {
@@ -34,7 +69,6 @@ html body main {
 }
 
 .orbitSimulationUserInput h1 {
-  color: white;
   text-align: center;
   font-size: 24px;
   font-family: 'Press Start 2P', cursive;
@@ -43,37 +77,62 @@ html body main {
 }
 
 .orbitSimulationUserInput h2 {
-  color: white;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.5px;
 }
 
-.orbitSimulationContainer {
-  width: 100%;
-  height: 80%;
-  position: relative;
-  border-radius: 25px;
-}
-
-.earth {
-  position: absolute;
-  width: 20px;
+.orbitSimulationUserInput .speedSetting .slideBar {
+  width: 250px;
   height: 20px;
-  background-color: green;
-  border-radius: 50%;
-  color: white;
+  margin: 15px auto;
+  position: relative;
+  cursor: e-resize;
 }
 
-.sun {
+.orbitSimulationUserInput .speedSetting .slideBar:before {
+  content: "";
+  display: block;
   position: absolute;
-  width: 60px;
-  height: 60px;
-  top: 50%;
-  left: 50%;
-  margin-left: -30px;
-  margin-top: -30px;
-  background-color: orange;
-  border-radius: 50%;
+  top: 9px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: white;
+}
+
+.orbitSimulationUserInput .speedSetting .slideBar span {
+  display: block;
+  height: inherit;
+  position: relative;
+  z-index: 2;
+  background-color: white;
+  border: 1px solid black;
+  cursor: inherit;
+}
+
+.orbitSimulationUserInput .speedSetting .sliderValue {
+  margin: 0 5px;
+}
+
+.orbitSimulationUserInput .speedSetting .speedButtons {
+  text-align: center;
+}
+
+.orbitSimulationUserInput .speedSetting .speedButtons .speedButton {
+  font-weight: bold;
+  background-color: black;
   color: white;
+  padding: 6px 0;
+  width: 130px;
+  margin: 10px;
+  border: solid white 2px;
+  display: inline-block;
+  cursor: pointer;
+  transition: background-color 1s;
+}
+
+.orbitSimulationUserInput .speedSetting .speedButtons .speedButton:hover, .orbitSimulationUserInput .speedSetting .speedButtons .speedButton.active {
+  background-color: white;
+  color: black;
 }
