--- a/css/partials/_content.scss
+++ b/css/partials/_content.scss
@@ -60,6 +60,20 @@ html {
   }
 
   .sun {
+    background-image: url("../img/sun-texture-3.jpg");
+    background-size: cover;
+    border-radius: 50%;
+    box-shadow: 0 0 30px 15px #fbe602, 0 0 50px 30px #e70f14, 0 0 70px 45px #fabc14;
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    top: 50%;
+    left: 50%;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+
+/*  .sun {
     position: absolute;
     width: 60px;
     height: 60px;
@@ -69,7 +83,7 @@ html {
     margin-top: -30px;
     background-color: orange;
     border-radius: 50%;
-  }
+  }*/
 }
 
 // -- UI -- //
@@ -132,25 +146,37 @@ html {
       margin: 0 5px;
     }
 
-    .speedButtons {
+    .choiceButtons {
       text-align: center;
 
-      .speedButton {
-        font-weight: bold;
+      label, input {
+        display: inline-block;
+      }
+
+      input[type="radio"] {
+        display: none;
+      }
+
+      input[type="radio"]:checked + label {
+        background-color: white;
+        color: black;
+      }
+
+      label {
         background-color: black;
         color: white;
+        border: solid white 2px;
+        font-weight: bold;
         padding: 6px 0;
         width: 130px;
         margin: 10px;
-        border: solid white 2px;
-        display: inline-block;
         cursor: pointer;
         transition: background-color 1s;
+      }
 
-        &:hover, &.active {
-          background-color: white;
-          color: black;
-        }
+      label:hover {
+        background-color: white;
+        color: black;
       }
     }
   }
